# CapycoreEngine

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  asset_service_8h.html  asset_service_8h.js  asset_service_8h__incl.map  asset_service_8h__incl.md5  asset_service_8h_source.html  audio__service_8h.html  audio__service_8h__incl.map  audio__service_8h__incl.md5  audio__service_8h_source.html  audio__source_8h.html  audio__source_8h.js  audio__source_8h__incl.map  audio__source_8h__incl.md5  audio__source_8h_source.html  behavior_8h.html  behavior_8h.js  behavior_8h__dep__incl.map  behavior_8h__dep__incl.md5  behavior_8h__incl.map  behavior_8h__incl.md5  behavior_8h_source.html  behaviorscript_8h.html  behaviorscript_8h.js  behaviorscript_8h__incl.map  behaviorscript_8h__incl.md5  behaviorscript_8h_source.html  body__2d_8h.html  body__2d_8h.js  body__2d_8h__dep__incl.map  body__2d_8h__dep__incl.md5  (+784 more)
.github/workflows/: ci.yml  doxygen.yml
doxygen/: header.html
doxygen/css/: theme-robot.css
include/engine/audio/: audio_manager.h  audio_service.h
include/engine/audio/sound/: generic_sound_instance.h  sdl_sound_instance.h  sdl_sound_resource.h  sound_factory.h  sound_instance.h  sound_resource.h  sound_type.h
include/engine/audio/sound/instance/: generic_sound_instance.h  sdl_sound_instance.h  sound_instance.h
include/engine/audio/sound/resource/: sdl_sound_resource.h  sound_resource.h
include/engine/core/: assetManager.h  behavior.h  engine.h  iEngineService.h  serviceContainer.h
include/engine/core/rendering/: Renderer.h  RendererFlags.h  Texture.h  assetService.h  font.h  renderable.h  renderer.h  rendererFlags.h  renderingService.h  texture.h  window.h
include/engine/core/rendering/renderables/: irenderable.h  renderable.h  texture.h
include/engine/input/: i_input.h  i_input_provider.h  input_manager.h  input_system.h  key_code.h  key_state.h  keyboard_input_system.h  mouse_button.h  mouse_state.h
include/engine/input/strategy/: sdl_input_strategy.h
include/engine/network/: client.h  connection_state.h  host.h  multiplayer_service.h  network_message.h  network_state.h  router.h
include/engine/physics/: physics_creation_factory.h  physics_math.h  physics_raycaster.h  physics_service.h  physics_world.h
include/engine/physics/creation/: physics_creation_factory.h  physics_creation_flags.h
include/engine/physics/raycast/: collider_ray_result.h  physics_raycaster.h
include/engine/physics/world/: body_2d.h  body_2d_transform.h  body_type_2d.h  collider_distance.h  physics_world.h
include/engine/physics/world/body/: body_2d.h  (+3 more)
include/engine/public/: behavior.h  component.h  gameObject.h  scene.h  sceneService.h  scene_service.h  transform.h
include/engine/public/components/: audio_source.h  behaviorscript.h  box_collider_2d.h  circle_collider_2d.h  collider_2d.h  rigidbody_2d.h  sprite.h
include/engine/public/ui/: ui_button.h  ui_object.h  ui_text.h
include/engine/public/util/: color.h  point.h  vector3.h
include/engine/storage/: simple_storage.h
include/engine/util/: memory.h  uuid.h
resources/fonts/roboto/: README.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  concepts_1.js  (+93 more)
src/: main.cpp
src/audio/: audio_manager.cpp  audio_service.cpp
src/audio/sound/: generic_sound_instance.cpp  sdl_sound_instance.cpp  sdl_sound_resource.cpp  sound_factory.cpp  sound_instance.cpp  sound_resource.cpp
src/audio/sound/instance/: generic_sound_instance.cpp  sdl_sound_instance.cpp  sound_instance.cpp
src/audio/sound/resource/: sdl_sound_resource.cpp  sound_resource.cpp
src/core/: assetManager.cpp  behavior.cpp  engine.cpp  serviceContainer.cpp
src/core/rendering/: Renderer.cpp  RendererFlags.cpp  Texture.cpp  assetService.cpp  font.cpp  renderable.cpp  renderer.cpp  rendererFlags.cpp  renderingService.cpp  texture.cpp  window.cpp
src/core/rendering/renderables/: irenderable.cpp  renderable.cpp  texture.cpp
src/core/rendering/strategies/: irendering_strategy_factory.cpp
src/input/: i_input_provider.cpp  input_manager.cpp  input_system.cpp  key_state.cpp  mouse_state.cpp
src/input/strategy/: sdl_input_strategy.cpp
src/network/: client.cpp  host.cpp  multiplayer_service.cpp  network_state.cpp  router.cpp
src/physics/: physics_creation_factory.cpp  physics_math.cpp  physics_raycaster.cpp  physics_service.cpp  physics_world.cpp
src/physics/creation/: physics_creation_factory.cpp
src/physics/raycast/: physics_raycaster.cpp
src/physics/world/: physics_world.cpp
src/physics/world/body/: body_2d.cpp
src/public/: behavior.cpp  component.cpp  gameObject.cpp  scene.cpp  sceneService.cpp  scene_service.cpp  transform.cpp
src/public/components/: audio_source.cpp  behaviorscript.cpp  rigidbody_2d.cpp  sprite.cpp
src/public/components/colliders/: box_collider_2d.cpp  circle_collider_2d.cpp  collider_2d.cpp
src/public/components/ui/: image.cpp  text.cpp  ui_button.cpp  ui_object.cpp  ui_text.cpp
src/public/ui/: ui_button.cpp  ui_object.cpp  ui_text.cpp
src/public/util/: color.cpp  point.cpp  vector3.cpp
src/storage/: simple_storage.cpp
src/util/: memory.cpp  uuid.cpp
tests/: main.cpp  test.cpp
tests/engine/audio/: audio.cpp  component.cpp
tests/engine/core/: behavior.cpp
tests/engine/physics/: creation.cpp  raycast.cpp  world.cpp
tests/engine/point/: point.cpp
tests/engine/public/: GameObjectTests.cpp
tests/engine/scenes/: scene.cpp  scene_service.cpp
tests/engine/storage/: storage.cpp
tests/engine/utils/: vector3.cpp
tests/input/: input_system.cpp  key_state.cpp  mouse_state.cpp
(+23 files in other folders)
